fixed bug where the button was hidden behind the footer

--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -56,6 +56,7 @@
     width: 15%;
     height: 3%;
     border-radius: 10%;
+    margin-bottom: 10%;
 }
 
 .footer {
